--- a/public/assets/css/commerce.css
+++ b/public/assets/css/commerce.css
@@ -3096,3 +3096,16 @@ div#exampleModal{
 .register-loader {
   width: 20px;
 }
+
+@media (max-width: 380px){
+    body .noo-countdown .noo-countdown-content .is-countdown .countdown-section {
+      width: 60px !important;
+      height: 70px !important;
+    }
+}
+
+@media (max-width: 480px) {
+  .commerce .form-row input.input-text, .commerce .form-row textarea {
+    height: 32px !important;
+  }
+}
