--- a/telso001/css/commerce.css
+++ b/telso001/css/commerce.css
@@ -3018,3 +3018,23 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     background: #d91f26;
     border: 0;
 }
+
+.fb-like.fb_iframe_widget {
+    margin-left: -50px;
+    margin-top: 6px;
+}
+
+
+@media (max-width:1200px){
+    .fb-like.fb_iframe_widget {
+        margin-left: -55px;
+        margin-top: -100px;
+    }
+}
+
+@media (max-width:993px){
+    .fb-like.fb_iframe_widget {
+        margin-left: -50px;
+        margin-top: -100px;
+    }
+}
