--- a/telso001/css/commerce.css
+++ b/telso001/css/commerce.css
@@ -3038,3 +3038,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
         margin-top: -100px;
     }
 }
+
+.widget.mailchimp-widget.text-center {
+    text-align: center;
+}
