--- a/telso001/css/style.css
+++ b/telso001/css/style.css
@@ -14589,7 +14589,23 @@ h2.sh-event-title.event-title {
 }
 
 .noo-sh-list-event .thumb-3 {
-    background-image: url(../images/event/event5.jpg)
+    background-image: url(../images/auditions/indian-idol-junior.jpg)
+}
+
+.noo-sh-list-event .thumb-4 {
+    background-image: url(../images/auditions/The-Voice-India-season-2-2016-Online-Registration-and-Audition-Details.jpg)
+}
+
+.noo-sh-list-event .thumb-5 {
+    background-image: url(../images/auditions/Sa-Re-Ga-Ma-Pa-2016-Online-Audition.jpg)
+}
+
+.noo-sh-list-event .thumb-6 {
+    background-image: url(../images/auditions/sing-dil-se-audition-2016.jpg)
+}
+
+.noo-sh-list-event .thumb-7 {
+    background-image: url(../images/auditions/magical-voice-of-india.png)
 }
 
 .noo-sh-list-event .noo-shevent-content {
