--- a/telso001/css/commerce.css
+++ b/telso001/css/commerce.css
@@ -3043,7 +3043,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     text-align: center;
 }
 
-div#disqus_thread {
+div#disqus_thread , div#disqus_comment{
     width: 90%;
     margin: 0 auto;
 }
@@ -3087,5 +3087,21 @@ table.dates-table {
 @media (max-width:302px) {
     table.dates-table {
     margin-left: 30px;
+}
+}
+
+
+img.other-audition-logo {
+    width: 60% !important;
+}
+
+img.other-audition-logo {
+    width: 300px !important;
+}
+
+
+@media (max-width: 430px) {
+    img.other-audition-logo {
+    width: 170px !important;
 }
 }
