--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14581,31 +14581,31 @@ h2.sh-event-title.event-title {
 }
 
 .noo-sh-list-event .thumb-1 {
-    background-image: url(../images/auditions/The-Viral-Voice-Online-Audition.jpg)
+    background-image: url(../../images/auditions/The-Viral-Voice-Online-Audition.jpg)
 }
 
 .noo-sh-list-event .thumb-2 {
-    background-image: url(../images/auditions/indian-idol.png)
+    background-image: url(../../images/auditions/indian-idol.png)
 }
 
 .noo-sh-list-event .thumb-3 {
-    background-image: url(../images/auditions/indian-idol-junior.jpg)
+    background-image: url(../../images/auditions/indian-idol-junior.jpg)
 }
 
 .noo-sh-list-event .thumb-4 {
-    background-image: url(../images/auditions/The-Voice-India-season-2-2016-Online-Registration-and-Audition-Details.jpg)
+    background-image: url(../../images/auditions/The-Voice-India-season-2-2016-Online-Registration-and-Audition-Details.jpg)
 }
 
 .noo-sh-list-event .thumb-5 {
-    background-image: url(../images/auditions/Sa-Re-Ga-Ma-Pa-2016-Online-Audition.jpg)
+    background-image: url(../../images/auditions/Sa-Re-Ga-Ma-Pa-2016-Online-Audition.jpg)
 }
 
 .noo-sh-list-event .thumb-6 {
-    background-image: url(../images/auditions/sing-dil-se-audition-2016.jpg)
+    background-image: url(../../images/auditions/sing-dil-se-audition-2016.jpg)
 }
 
 .noo-sh-list-event .thumb-7 {
-    background-image: url(../images/auditions/magical-voice-of-india.png)
+    background-image: url(../../images/auditions/magical-voice-of-india.png)
 }
 
 .noo-sh-list-event .noo-shevent-content {
@@ -18619,7 +18619,7 @@ body.theme-light.single-tribe_venue .tribe-events-venue .tribe-events-venue-meta
 }
 
 body.theme-light .noo-page-heading {
-    background-image: url(../images/bg-heading-light.png)
+    background-image: url(../../images/bg-heading-light.png)
 }
 
 body.theme-light .commerce-cart table.shop_table td,
